--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -739,6 +739,19 @@
 		margin-bottom: 0;
 	}
 
+	/* press room */
+	body.press-room{
+
+		.media-body{
+			height: auto;
+			padding-bottom: 3em;
+		}
+
+		.pull-left{
+			display: none;
+		}
+	}	
+
 
 }
 
