--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -473,6 +473,15 @@
 			padding-right: 0!important;
 		}
 	}
+
+	/* press room */
+	body.press-room{
+		h2.block-title{
+			margin-left: 0 !important;
+			margin-right: 0 !important;
+		}
+	}	
+
 	/*Footer*/
 	.footer-section{
 		display: none;
