--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -4476,14 +4476,14 @@ ul[data-sa-theme="basic-green"].ui-menu {
 }
 /* Press room */
 body.press-room .field-name-body img,
-body.page-node-164 .field-name-body img {
+body.european-week .field-name-body img {
   float: left;
   padding-right: 1em;
 }
 body.press-room #block-views-news-press-room,
-body.page-node-164 #block-views-news-press-room,
+body.european-week #block-views-news-press-room,
 body.press-room #block-hwc-european-week-news-events,
-body.page-node-164 #block-hwc-european-week-news-events {
+body.european-week #block-hwc-european-week-news-events {
   float: left;
   background: url(../images/background-press-room.png) no-repeat;
   padding: 2em;
@@ -4492,31 +4492,41 @@ body.page-node-164 #block-hwc-european-week-news-events {
   border-radius: 7px;
 }
 body.press-room #block-hwc-european-week-news-events,
-body.page-node-164 #block-hwc-european-week-news-events {
+body.european-week #block-hwc-european-week-news-events {
   background: #EFEFF0;
 }
 body.press-room #block-hwc-european-week-news-events h2.block-title,
-body.page-node-164 #block-hwc-european-week-news-events h2.block-title {
+body.european-week #block-hwc-european-week-news-events h2.block-title {
   display: none;
 }
 body.press-room #block-views-news-press-room,
-body.page-node-164 #block-views-news-press-room {
+body.european-week #block-views-news-press-room {
   margin-bottom: 2em;
   padding-bottom: 2em;
-  width: 700px;
 }
 body.press-room #block-views-news-press-room h3,
-body.page-node-164 #block-views-news-press-room h3 {
+body.european-week #block-views-news-press-room h3 {
   position: relative;
   color: #00309d;
   margin-top: 0;
   font-weight: 400;
-  background: url(../images/grey-h3-line.png) repeat-x 50% 75% #ffffff;
+  background: url(../images/grey-h3-line.png) repeat-x 50% 82% #ffffff;
   margin: 0;
   padding: 25px 6px 0 11px;
 }
+body.press-room #block-views-news-press-room h3:after,
+body.european-week #block-views-news-press-room h3:after {
+  width: 30px;
+  height: 15px;
+  content: ' ';
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 32px;
+  background: #FFFF;
+}
 body.press-room #block-views-news-press-room h3:before,
-body.page-node-164 #block-views-news-press-room h3:before {
+body.european-week #block-views-news-press-room h3:before {
   content: ' ';
   background: url(../images/news-h3-ico.png) no-repeat #ffffff;
   position: absolute;
@@ -4528,23 +4538,57 @@ body.page-node-164 #block-views-news-press-room h3:before {
   float: left;
 }
 body.press-room #block-views-news-press-room h3 span,
-body.page-node-164 #block-views-news-press-room h3 span {
-  padding-left: 72px;
+body.european-week #block-views-news-press-room h3 span {
+  padding-left: 82px;
+  background: #FFF;
+  padding-right: 15px;
+  margin-left: -11px;
+}
+body.press-room #block-views-frontpage-events-press-room,
+body.european-week #block-views-frontpage-events-press-room {
+  margin-bottom: 2em;
+  padding-bottom: 2em;
+}
+body.press-room #block-views-frontpage-events-press-room h3,
+body.european-week #block-views-frontpage-events-press-room h3 {
+  position: relative;
+  color: #00309d;
+  margin-top: 0;
+  font-weight: 400;
+  background: url(../images/grey-h3-line.png) repeat-x 50% 82% #ffffff;
+  margin: 0;
+  padding: 23px 6px 0 11px;
+}
+body.press-room #block-views-frontpage-events-press-room h3:before,
+body.european-week #block-views-frontpage-events-press-room h3:before {
+  content: ' ';
+  background: url(../images/events-h3-ico.png) no-repeat #ffffff;
+  position: absolute;
+  top: 11px;
+  left: -8px;
+  width: 41px;
+  display: block;
+  height: 45px;
+  float: left;
+}
+body.press-room #block-views-frontpage-events-press-room h3 span,
+body.european-week #block-views-frontpage-events-press-room h3 span {
+  padding-left: 30px;
   background: #FFF;
   padding-right: 10px;
 }
 body.press-room .box-before.news,
-body.page-node-164 .box-before.news {
+body.european-week .box-before.news {
   margin-bottom: 2em;
   padding-bottom: 2em;
   width: 660px;
 }
 body.press-room .box-before.news h3,
-body.page-node-164 .box-before.news h3 {
+body.european-week .box-before.news h3 {
   position: relative;
 }
 body.press-room .box-before.news h3:before,
-body.page-node-164 .box-before.news h3:before {
+body.european-week .box-before.news h3:before {
   content: ' ';
   background: url(../images/news-h3-ico.png) no-repeat #ffffff;
   position: absolute;
@@ -4556,19 +4600,19 @@ body.page-node-164 .box-before.news h3:before {
   float: left;
 }
 body.press-room .box-before.news h3 span,
-body.page-node-164 .box-before.news h3 span {
+body.european-week .box-before.news h3 span {
   padding-left: 50px;
 }
 body.press-room .box-before.events,
-body.page-node-164 .box-before.events {
+body.european-week .box-before.events {
   width: 320px;
 }
 body.press-room .box-before.events h3,
-body.page-node-164 .box-before.events h3 {
+body.european-week .box-before.events h3 {
   position: relative;
 }
 body.press-room .box-before.events h3:before,
-body.page-node-164 .box-before.events h3:before {
+body.european-week .box-before.events h3:before {
   background: url(../images/events-h3-ico.png) no-repeat #ffffff;
   position: absolute;
   top: -13px;
@@ -4580,11 +4624,11 @@ body.page-node-164 .box-before.events h3:before {
   float: left;
 }
 body.press-room .box-before.events h3 span,
-body.page-node-164 .box-before.events h3 span {
+body.european-week .box-before.events h3 span {
   padding-left: 45px;
 }
 body.press-room .box-before,
-body.page-node-164 .box-before {
+body.european-week .box-before {
   background: #FFF;
   border-radius: 7px;
   padding: 1.5em;
@@ -4594,145 +4638,145 @@ body.page-node-164 .box-before {
   margin-bottom: 2em;
 }
 body.press-room .box-before h3,
-body.page-node-164 .box-before h3 {
+body.european-week .box-before h3 {
   color: #00309d;
   margin-top: 0;
   font-weight: 400;
   background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
 }
 body.press-room .box-before h3 span,
-body.page-node-164 .box-before h3 span {
+body.european-week .box-before h3 span {
   background: #FFF;
   padding-right: 10px;
 }
 body.press-room .view-news,
-body.page-node-164 .view-news {
+body.european-week .view-news {
   background: #FFF;
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
-  padding: 2em 2em 3em 2em;
+  padding: 2em 2em 4em 2em;
 }
 body.press-room .view-news .pull-left img,
-body.page-node-164 .view-news .pull-left img {
+body.european-week .view-news .pull-left img {
   border-radius: 10px;
 }
 body.press-room .view-news .date-display-single,
-body.page-node-164 .view-news .date-display-single {
+body.european-week .view-news .date-display-single {
   float: none;
 }
 body.press-room .view-news .media-body a,
-body.page-node-164 .view-news .media-body a,
+body.european-week .view-news .media-body a,
 body.press-room .view-news .titlte-news-events a,
-body.page-node-164 .view-news .titlte-news-events a {
+body.european-week .view-news .titlte-news-events a {
   font-size: 1.4em;
   font-style: normal;
   padding-top: 0.5em;
   display: block;
 }
 body.press-room .view-news .media-left,
-body.page-node-164 .view-news .media-left,
+body.european-week .view-news .media-left,
 body.press-room .view-news .media > .pull-left,
-body.page-node-164 .view-news .media > .pull-left {
+body.european-week .view-news .media > .pull-left {
   padding-right: 25px;
 }
 body.press-room .view-news ul.media-list li.media,
-body.page-node-164 .view-news ul.media-list li.media {
+body.european-week .view-news ul.media-list li.media {
   border-bottom: 1px solid #ACC700;
   padding-bottom: 2em;
   padding-top: 1em;
 }
 body.press-room .view-news ul.media-list > li:nth-child(1),
-body.page-node-164 .view-news ul.media-list > li:nth-child(1) {
+body.european-week .view-news ul.media-list > li:nth-child(1) {
   padding-top: 0;
 }
 body.press-room .view-news ul.media-list > li:nth-child(2) .pull-left,
-body.page-node-164 .view-news ul.media-list > li:nth-child(2) .pull-left {
+body.european-week .view-news ul.media-list > li:nth-child(2) .pull-left {
   float: right !important;
   padding-right: 0;
   padding-left: 25px;
 }
 body.press-room .view-news ul.media-list > li:nth-child(4),
-body.page-node-164 .view-news ul.media-list > li:nth-child(4) {
+body.european-week .view-news ul.media-list > li:nth-child(4) {
   border-bottom: 0 solid #ACC700;
 }
 body.press-room .view-news ul.media-list > li:nth-child(4) .pull-left,
-body.page-node-164 .view-news ul.media-list > li:nth-child(4) .pull-left {
+body.european-week .view-news ul.media-list > li:nth-child(4) .pull-left {
   float: right !important;
   padding-right: 0;
   padding-left: 25px;
 }
 body.press-room .region-sidebar-second #block-views-frontpage-events-press-room,
-body.page-node-164 .region-sidebar-second #block-views-frontpage-events-press-room {
+body.european-week .region-sidebar-second #block-views-frontpage-events-press-room {
   float: left;
   margin-top: 1em;
   padding-bottom: 1em;
 }
 body.press-room .region-sidebar-second #block-views-frontpage-events-press-room h2.block-title,
-body.page-node-164 .region-sidebar-second #block-views-frontpage-events-press-room h2.block-title {
+body.european-week .region-sidebar-second #block-views-frontpage-events-press-room h2.block-title {
   background: url(../images/events-h3-ico.png) -5px -3px no-repeat #ffffff;
   padding-top: 0;
   padding-left: 45px;
 }
 body.press-room .region-sidebar-second .related-resources,
-body.page-node-164 .region-sidebar-second .related-resources {
+body.european-week .region-sidebar-second .related-resources {
   width: auto;
 }
 body.press-room .view-frontpage-events .city,
-body.page-node-164 .view-frontpage-events .city,
+body.european-week .view-frontpage-events .city,
 body.press-room .view-frontpage-events .country,
-body.page-node-164 .view-frontpage-events .country {
+body.european-week .view-frontpage-events .country {
   font-weight: bold;
 }
 body.press-room .view-frontpage-events .country,
-body.page-node-164 .view-frontpage-events .country {
+body.european-week .view-frontpage-events .country {
   float: left;
 }
 body.press-room .view-frontpage-events .country:after,
-body.page-node-164 .view-frontpage-events .country:after {
+body.european-week .view-frontpage-events .country:after {
   content: ', ';
   padding-right: 3px;
 }
 body.press-room .view-frontpage-events .titlte-news-events a,
-body.page-node-164 .view-frontpage-events .titlte-news-events a {
+body.european-week .view-frontpage-events .titlte-news-events a {
   font-size: 1.1em;
 }
 body.press-room .view-frontpage-events .event_country,
-body.page-node-164 .view-frontpage-events .event_country {
+body.european-week .view-frontpage-events .event_country {
   margin-right: 1em;
 }
 body.press-room .view-frontpage-events .views-row,
-body.page-node-164 .view-frontpage-events .views-row {
+body.european-week .view-frontpage-events .views-row {
   border-bottom: 1px solid #B0B1B2;
   padding-bottom: 3em;
   padding-top: 1em;
   padding-left: 0;
 }
 body.press-room .view-frontpage-events .views-row-last,
-body.page-node-164 .view-frontpage-events .views-row-last {
+body.european-week .view-frontpage-events .views-row-last {
   border-bottom: 0 solid #B0B1B2;
 }
 body.press-room .view-frontpage-events .date-display-single,
-body.page-node-164 .view-frontpage-events .date-display-single {
+body.european-week .view-frontpage-events .date-display-single {
   float: none;
   width: 100%;
   display: block;
   font-size: 1.3rem !important;
 }
 body.press-room .view-frontpage-events .content-event,
-body.page-node-164 .view-frontpage-events .content-event {
+body.european-week .view-frontpage-events .content-event {
   padding-top: 8px;
 }
 body.press-room .media-body,
-body.page-node-164 .media-body {
+body.european-week .media-body {
   height: 220px;
   position: relative;
 }
 body.press-room .media-body p,
-body.page-node-164 .media-body p {
+body.european-week .media-body p {
   padding-top: 1em;
 }
 body.press-room .media-body a.more-link,
-body.page-node-164 .media-body a.more-link {
+body.european-week .media-body a.more-link {
   border: 1px solid #b0b1b3;
   border-bottom: 1px solid #b0b1b3 !important;
   border-radius: 3px;
@@ -4751,7 +4795,7 @@ body.page-node-164 .media-body a.more-link {
   background-position: 110%;
 }
 body.press-room .media-body a.more-link:hover,
-body.page-node-164 .media-body a.more-link:hover {
+body.european-week .media-body a.more-link:hover {
   text-decoration: none;
   color: #58595b;
   border: 1px solid #58595b;
@@ -4764,9 +4808,32 @@ body.page-node-164 .media-body a.more-link:hover {
   padding-right: 2em;
 }
 body.press-room .media-body a.more-link:before,
-body.page-node-164 .media-body a.more-link:before {
+body.european-week .media-body a.more-link:before {
   content: '';
   display: none;
+}
+body.press-room .more-link,
+body.european-week .more-link {
+  display: block;
+  clear: both;
+}
+body.european-week .view-frontpage-events .views-row {
+  height: 128px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+body.european-week .view-frontpage-events .content-event {
+  padding-top: 0;
+}
+body.european-week .view-news {
+  padding: 0.5em 0 0 0;
+}
+body.european-week .box-before.news {
+  padding-bottom: 20px;
+}
+body.european-week #block-views-news-european-week ul > li:nth-child(2) {
+  border-bottom: 0;
+  padding-bottom: 0;
 }
 @media (max-width: 1200px) {
   .start-browsing {
