--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5416,6 +5416,19 @@ body.press-room, body.european-week{
 }
 
 body.european-week{
+
+	.page_title{
+		height: 233px;
+	}
+
+	#european_week_date{
+		color: #FFF;
+		font-size: 3.4rem;
+	    width: 100%;
+	    text-align:center;
+	    font-weight: bold;
+	}
+
 	.view-frontpage-events{
 		.views-row{
 			height: 128px;
