--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5199,12 +5199,15 @@ body.press-room, body.european-week{
 	}
 
 
+	.box-before.news.two-column{
+		width: 660px;
+	}
 
 
 	.box-before.news{
 		margin-bottom: 2em;
 		padding-bottom: 2em;
-		width: 660px;
+		width: 100%;
 		h3{
 			position: relative;
 			&:before{
@@ -5439,7 +5442,7 @@ body.press-room, body.european-week{
 body.european-week{
 
 	.page_title{
-		height: 233px;
+		height: 225px;
 	}
 
 	#european_week_date{
@@ -5459,6 +5462,10 @@ body.european-week{
 
 		.content-event{
 			padding-top: 0;
+		}
+
+		.more-link{
+			padding-top: 10px;
 		}
 	}
 
