--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5050,6 +5050,18 @@ ul[data-sa-theme="basic-green"].ui-menu{
 		content: none;
 	}
 
+	.captchaContainer{
+		padding-bottom: 1em;
+		#captcha_0_readaudio{
+			float: left;
+		}
+
+		 #captcha_0_refresh img{
+		 	height: 38px;
+    		width: 38px;
+		}
+	}
+
 	#edit-submit{
 		border-top-right-radius: 5px;
 		border-bottom-right-radius: 5px;
