--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4998,6 +4998,7 @@ ul[data-sa-theme="basic-green"].ui-menu{
     	div{
     		position: relative;
     		float: left;
+    		width: 100%;
     	}
 
     	.form-submit{
