--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4984,7 +4984,7 @@ ul[data-sa-theme="basic-green"].ui-menu{
 #block-osha-newsletter-osha-newsletter-events-subscribe{
 	background: url(../images/background-newsletter-event.png) no-repeat;
     border-radius: 15px;
-    color: #FFFF;
+    color: #FFF;
     padding: 1.7em;
     width: 288px;
     float: right;
@@ -5025,14 +5025,14 @@ ul[data-sa-theme="basic-green"].ui-menu{
 	}
 
 	a, label{
-		color: #FFFF;
+		color: #FFF;
 		font-weight: normal;
 		font-size: 0.9em;
 	}
 
 	label:before{
 		color: #003399;
-		background: #FFFF;
+		background: #FFF;
 		border: 0 !important;
 	}
 
@@ -5166,7 +5166,7 @@ body.press-room, body.european-week{
 				position: absolute;
 				right: 0;
 				top: 32px;
-				background: #FFFF;
+				background: #FFF;
 	   		}
 			
 			&:before{
