--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5029,6 +5029,10 @@ ul[data-sa-theme="basic-green"].ui-menu{
 		font-size: 0.9em;
 	}
 
+	label{
+		padding-left: 0;
+	}
+
 	label:before{
 		color: #003399;
 		background: #FFF;
